@@ -1,0 +1,6 @@
+A colour picker that can be used as an input in Shiny apps or
+Rmarkdown documents. The colour picker supports alpha opacity, custom
+colour palettes, and many more options. A Plot Colour Helper tool is
+available as an RStudio Addin, which helps you pick colours to use in
+your plots. A more generic Colour Picker RStudio Addin is also
+provided to let you select colours to use in your R code.
