@@ -1,0 +1,6 @@
+$NetBSD: distinfo,v 1.1 2019/08/09 20:55:25 brook Exp $
+
+SHA1 (R/colourpicker_1.0.tar.gz) = 5c3d7cdc1ae45e2eb0d8146c6d747400e1bf51b4
+RMD160 (R/colourpicker_1.0.tar.gz) = 290d472b2bd67c044bfd4d0614a3385b22f32957
+SHA512 (R/colourpicker_1.0.tar.gz) = e245cbe3b237a070e785e0841ef2e4c3a08a279e5df2e1703afb897916780c59b4ff432549dd0cae3cd98cec39cbf1cef29db3b5dfc6339d5c2adfca5ea8d539
+Size (R/colourpicker_1.0.tar.gz) = 1897585 bytes
