@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2019,v 1.3376 2019/08/09 20:54:28 brook Exp $
+$NetBSD: CHANGES-2019,v 1.3377 2019/08/09 20:55:25 brook Exp $
 
 Changes to the packages collection and infrastructure in 2019:
 
@@ -5499,3 +5499,4 @@ Changes to the packages collection and infrastructure in 2019:
 	Added www/R-shiny version 1.3.2 [brook 2019-08-09]
 	Added www/R-shinyjs version 1.0 [brook 2019-08-09]
 	Added www/R-miniUI version 0.1.1.1 [brook 2019-08-09]
+	Added graphics/R-colourpicker version 1.0 [brook 2019-08-09]
